Stop word wrap on vertical nav

--- a/styles/components/_link-group.scss
+++ b/styles/components/_link-group.scss
@@ -44,6 +44,7 @@
 
     .lbh-link {
       border-left: 5px solid #ffffff;
+      white-space: nowrap;
       padding: 0;
       text-decoration: none;
       line-height: 50px;
